--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,6 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
 
-{#        {{ request.user.userprofile.role.all }}#}
         {% for role in  request.user.userprofile.role.select_related %}
             {% for menu in role.menus.select_related %}
                 <li><a href="{% if menu.url_type == 0 %}{{ menu.url_name }}{% else %}{% url menu.url_name %}{% endif %}">{{ menu.name }}</a></li>
@@ -45,11 +44,12 @@
       </ul>
 
     </div>
-    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-      <h2 class="page-header">Dashboard</h2>
-
+        {% block right %}
+            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <h2 class="page-header">Dashboard</h2>
+            </div>
+        {% endblock %}
     </div>
-  </div>
 </div>
 
 
