--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <div class="col-sm-3 col-md-2 sidebar">
       <ul class="nav nav-sidebar">
 
-        {% for role in  request.user.userprofile.role.select_related %}
+        {% for role in  request.user.role.select_related %}
             {% for menu in role.menus.select_related %}
                 <li><a href="{% if menu.url_type == 0 %}{{ menu.url_name }}{% else %}{% url menu.url_name %}{% endif %}">{{ menu.name }}</a></li>
              {% endfor %}
